- Scrollbar bei der R/O-Ansicht des Quelltexts (bug #4459). - Syntax-Highliting in der R/O-Ansicht des Quelltexts.

--- a/core/src/zeit/cms/browser/resources/forms.css
+++ b/core/src/zeit/cms/browser/resources/forms.css
@@ -322,9 +322,38 @@ textarea#form\.caption {
 }
 
 #source-editor textarea {
-  width: 100%;
+  width: 95%;
   height: 70ex;
 }
+
+
+
+#source-editor span.h_tag {
+  color: blue;
+}
+
+#source-editor span.h_attribute {
+  color: purple;
+}
+
+#source-editor span.h_doublestring {
+  color: brown;
+}
+
+#source-editor span.h_singlestring {
+  color: brown;
+}
+
+#source-editor span.h_default {
+  color: black;
+}
+
+#source-editor span.h_other {
+  color: black;
+}
+
+
+/* WYSIWYG editor */
 
 .fckeditor  {
   width: 99%;
